--- a/package.json
+++ b/package.json
@@ -9,9 +9,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vueuse/core": "^13.6.0",
+    "axios": "^1.11.0",
+    "chart.js": "^4.4.1",
+    "date-fns": "^4.1.0",
+    "js-cookie": "^3.0.5",
+    "lodash-es": "^4.17.21",
+    "pinia": "^3.0.3",
+    "socket.io-client": "^4.8.1",
+    "vee-validate": "^4.5.8",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1",
-    "chart.js": "^4.4.1"
+    "vue-toastification": "^2.0.0-rc.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.0",
